<resources>
    <string name="app_name">Sakkara</string>
    <string name="todo">TODO</string>
    <string name="kontakt">Kontakt</string>
    <string name="galeria">Galeria</string>
    <string name="menu">Menu</string>
    <string name="strona_g_wna">Strona główna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="restauracja_sakkara">Restauracja Sakkara</string>
    <string name="miejscowosc">Piotrków Trybunalski</string>
    <string name="adres">ul. Młynarska 1</string>
    <string name="telefon">44 649 31 19</string>
    <string name="opis">Poznaj wyjątkowe smaki naszej restauracji  </string>

    <string name="opis_restauracji">Oferujemy Państwu dania kuchni orientalnej, ale także bardziej klasyczne pozycje. Przemiła atmosfera, nastrojowa arabska muzyka sprawia, że można poczuć się tu jak w innym świecie. Podajemy potrawy przygotwane z najlepszych gatunkowo produktów, wszystko świeże i co najważniejsze robione na bieżąco, a wszystko to w bardzo przystępnej cenie, o czym możecie Państwo się przekonać przeglądając nasze Menu. Dogodna lokalizacja restauracji Sakkara w Piotrkowie pozwoli łatwo i szybko przenieśc się państwu w magiczny świat orientu. Restaruacja Sakkara potrafi pobudzić wszystkie zmysły. Niezwykle smaczne, aromatyczne potrawy, nęcą oko wyglądem, a nos zapachem. Nie tylko menu robi wrażenie: klimatyczna sala udekorowana ze smakiem i orientalna muzyka uprzyjemniają pobyt w Sakkarze. Nasza restauracja jest nie tylko idealna dla par ale również dla rodzin z dziećmi. Duże, wygodne stoły pozwalaja rodzicom na spędzenie miło czasu z ich pociechami.</string>
    <string name="zaproszenie">Zapraszamy do naszej restauracji</string>
    <string name="rezerwacja">Możliwość rezerwacji miejsc</string>
    <string name="stek">Stek z karkówki</string>
    <string name="cena_30">30,00</string>
    <string name="cena_26_50">26,50</string>
    <string name="shoarma_z_serem">Shoarma z serem</string>
    <string name="shoarma">Shoarma</string>
    <string name="cena_25">25,00</string>
    <string name="filet_drobiowy_z_grilla">Filet z grilla</string>
    <string name="filet_na_ostro">Filet na ostro</string>
    <string name="cena_31">31,00</string>
    <string name="szaszlyk">Szaszłyk drobiowy</string>
    <string name="powrot">Powrót</string>
    <string name="przerwa"> </string>
    <string name="wieprzowina">Dania z wieprzowiny 200g</string>
    <string name="shoarma_wieprzowa_opis">mięso wieprzowe, frytki lub ryż, surówka</string>
    <string name="shoarma_z_farszem">Shoarma z farszem</string>
    <string name="shoarma_z_farszem_opis">mięso wieprzowe, duszona cebula, papryka,"\n" pieczarki, frytki lub ryż, surówka</string>
    <string name="cena_27_50">27,50</string>
    <string name="shoarma_z_serem_opis">mięso wieprzowe zapiekane z serem, frytki"\n" lub ryż, surówka</string>
    <string name="steki_opis">2 steki wieprzowe, duszona cebula, papryka"\n" i pieczarki, frytki lub ryż, surówka</string>
    <string name="dania_z_drobiu_200g">Dania z drobiu 200g</string>
    <string name="shoarma_drobiowa_opis">mięso drobiowe, frytki lub ryż, surówka</string>
    <string name="shoarma_drobiowa_z_farszem_opis">mięso drobiowe, duszona cebula, papryka,"\n" pieczarki, frytki lub ryż,surówka</string>
    <string name="drobiowa_z_serem_opis">mięso drobiowe zapiekane z serem, frytki"\n" lub ryż, surówka</string>
    <string name="opis_filet_z_grilla">piersi z kurczaka, duszona cebula, papryka,"\n" pieczarki, frytki lub ryż, surówka</string>
    <string name="filet_na_slodko">Filet na słodko</string>
    <string name="filet_na_slodko_opis">piersi z kurczaka, miód, migdały, rodzynki,"\n" frytki lub ryż, surówka</string>
    <string name="filet_na_ostro_opis">piersi z kurczaka, pasta chilli, duszona cebula,"\n" papryka i pieczarki, frytki lub ryż, surówka</string>
    <string name="szaszlyki_opis">2 szaszłyki z cebulą i papryką, duszona cebula,"\n" papryka i pieczarki, frytki lub ryż, surówka</string>
    <string name="dania_z_wolowiny">Dania z wołowiny</string>
    <string name="kebap_250g">Kebap 250g</string>
    <string name="cena_29_00">29,00</string>
    <string name="kebap_opis">2 kotlety z mielonej wołowiny,"\n" frytki lub ryż, surówka</string>
    <string name="kebap_specjal">Kebap specjal 250g</string>
    <string name="kebap_specjal_opis">2 kotlety z mielonej wołowiny zapiekane"\n" z serem, frytki lub ryż, surówka</string>
    <string name="stek_faraona">Stek faraona 250g</string>
    <string name="cena_45">45,00</string>
    <string name="stek_faraona_opis">polędwica wołowa, masło czosnkowe,"\n" duszona cebula, papryka, pieczarki,"\n" frytki lub ryż, surówka</string>
    <string name="dania_specjal">Dania specjal</string>
    <string name="shoarma_mieszana">Shoarma mieszana 250g</string>
    <string name="mieszana_opis">mięso drobiowe i wieprzowe, duszona cebula,"\n" papryka, pieczarki, frytki lub ryż, surówka</string>
    <string name="golonka_opis">grilowane mięso bez kości, frytki lub ryż,"\n" surówka</string>
    <string name="golonka_z_grilla">Golonka z grilla 350g</string>
    <string name="cena_32">32,00</string>
</resources>