<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".glowna_fragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:rotation="90"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/tlo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:paddingTop="20dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="287dp"
                    android:contentDescription="@string/todo"
                    android:paddingTop="30dp"
                    android:src="@drawable/home_slider_72_compressor" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-100dp"
                    android:layout_marginBottom="50dp"
                    android:lines="2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/opis"
                    android:textAlignment="textEnd"
                    android:textColor="#FFF779"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:text="@string/opis_restauracji"
                    android:textAlignment="viewStart"
                    android:textColor="#FFF7C6" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="386dp"
                    android:layout_height="468dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo"
                    android:paddingStart="-10dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/smallhome2" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>